# rechnerarchitektur

./: .gitignore  CMakeLists.txt  Makefile  README.adoc
example01-add_two_numbers/: add_two_numbers.s  add_two_numbers0.s
example02-ascii_art_christmastree/: christmastree.s
example04-array_operations/: array_operations.s  model_solution.s
